Complementando comando en git en html

--- a/ejercicio 1/index.html
+++ b/ejercicio 1/index.html
@@ -27,6 +27,13 @@
             <li><b>Git config user.email</b>Verifica el correo de usuario en el reporsitorio local</li>
             <li><b>Git config --global -- user-all user.name:</b>Elimina las configuraciones del nombre de usuario en el repositorio</li>
             <li><b>lS</b>Ingresar a una ruta especifica(Muestra la lista de contenidos de un directoriol)</li>
+            <li><b>Git log</b>Mostrar historial del reporsitorio</li>
+            <li><b>Cd ..</b>Salir del directorio en la terminal</li>
+            <li><b>git commit -m "Nuevo comentario"</b>Se usa para escribir un nuevo comentario / 
+            guardar los cambios realizados en el repositorio con un mensaje resumido</li>
+            <li><b> git branch</b>Mostrar el nombre de la rama </li>
+            <li><b>git branch -m nombre</b> permite cambiar el nombre de la rama </li>
+            <li><b></b></li>
             <li><b></b></li>
             <li><b></b></li>
             <li><b></b></li>
