se agrego a githab

--- a/ejercicio 1/index.html
+++ b/ejercicio 1/index.html
@@ -33,8 +33,8 @@
             guardar los cambios realizados en el repositorio con un mensaje resumido</li>
             <li><b> git branch</b>Mostrar el nombre de la rama </li>
             <li><b>git branch -m nombre</b> permite cambiar el nombre de la rama </li>
-            <li><b></b></li>
-            <li><b></b></li>
+            <li><b>dit remote add origen url</b>Se agrega la direccion  web del reporcitorio remoto</li>
+            <li><b>git push</b>Enviar los comits del repositorio remoto</li>
             <li><b></b></li>
             <li><b></b></li>
             <li><b></b></li>
