se agrego a githab

--- a/ejercicio 1/index.html
+++ b/ejercicio 1/index.html
@@ -34,9 +34,11 @@
             <li><b> git branch</b>Mostrar el nombre de la rama </li>
             <li><b>git branch -m nombre</b> permite cambiar el nombre de la rama </li>
             <li><b>dit remote add origen url</b>Se agrega la direccion  web del reporcitorio remoto</li>
-            <li><b>git push</b>Enviar los comits del repositorio remoto</li>
-            <li><b></b></li>
-            <li><b></b></li>
+            <li><b>git push</b>Enviar los commits del repositorio remoto</li>
+            <li><b>git clone</b>Para apuntar en un reporcitorio existente y clonar o copiar dicho reporcitorio en un nuevo
+            directorio,en otra ubicación</li>
+            <li><b>git mage</b>Permite tomar lineas independientes de desarrollo creadas por git branch 
+            e integradas en una sola rama </li>
             <li><b></b></li>
         </ul>
 </body>
