se agrego contenido

--- a/ejercicio 1/index.html
+++ b/ejercicio 1/index.html
@@ -39,7 +39,7 @@
             directorio,en otra ubicación</li>
             <li><b>git mage</b>Permite tomar lineas independientes de desarrollo creadas por git branch 
             e integradas en una sola rama </li>
-            <li><b></b></li>
+            <li>Git remote<b>Muestra todos los reporcitorios remoto que esta conectado con git local</b></li>
         </ul>
 </body>
 </html>
