--- a/ejercicio 1/index.html
+++ b/ejercicio 1/index.html
@@ -8,38 +8,35 @@
     <title>conociendo a  git</title>
 </head>
 <body>
-    <h1>git </h1>
-    <p>Git is the open source distributed version control system that facilitates GitHub activities on
-        your laptop or desktop. This cheat sheet summarizes commonly used Git command line
-        instructions for quick reference</p>
-        <h2>Comandos principales de git </h2>
-        <ul>
-            <li><b>Cd:</b>Verificamos la carpeta que estamos, Ingresa a un directorio(Carpeta) a una terminal </li>
-            <li><b>Git INIT:</b>Iniciar un proyecto git.</li>
-            <li><b>Git config --global user.email "Email personal":</b>Identificar y configurar localmente el email en un repositorio local</li>
-            <li><b>Git config --global user.name "name personal":</b>Identificar y configurar localmente el nombre del usuario en un repositorio local</li>
-            <li><b>Git add . :</b>Agrega todos los archivos modificados al reporsitorio</li>
-            <li><b>Git status:</b>Muestra el estado del directorio de trabajo y permite ver los cambios que se han preparado</li>
-            <li><b>Pwd</b> Muestra la ruta en donde estoy parado, Mostrar la ruta de directorio actual en la terminal </li>
-            <li><b>Cd "Nombre archivo"</b>Sirve para ingresar a una carpeta o documento</li>
-            <li><b>clear</b>Borrar pantalla del terminado</li>
-            <li><b>Git config user.name</b>Identifica el nombre de ususario en el repositorio local</li>
-            <li><b>Git config user.email</b>Verifica el correo de usuario en el reporsitorio local</li>
-            <li><b>Git config --global -- user-all user.name:</b>Elimina las configuraciones del nombre de usuario en el repositorio</li>
-            <li><b>lS</b>Ingresar a una ruta especifica(Muestra la lista de contenidos de un directoriol)</li>
-            <li><b>Git log</b>Mostrar historial del reporsitorio</li>
-            <li><b>Cd ..</b>Salir del directorio en la terminal</li>
-            <li><b>git commit -m "Nuevo comentario"</b>Se usa para escribir un nuevo comentario / 
-            guardar los cambios realizados en el repositorio con un mensaje resumido</li>
-            <li><b> git branch</b>Mostrar el nombre de la rama </li>
-            <li><b>git branch -m nombre</b> permite cambiar el nombre de la rama </li>
-            <li><b>dit remote add origen url</b>Se agrega la direccion  web del reporcitorio remoto</li>
-            <li><b>git push</b>Enviar los commits del repositorio remoto</li>
-            <li><b>git clone</b>Para apuntar en un reporcitorio existente y clonar o copiar dicho reporcitorio en un nuevo
-            directorio,en otra ubicación</li>
-            <li><b>git mage</b>Permite tomar lineas independientes de desarrollo creadas por git branch 
-            e integradas en una sola rama </li>
-            <li>Git remote<b>Muestra todos los reporcitorios remoto que esta conectado con git local</b></li>
-        </ul>
+    <ul>
+        <li><b>Cd: </b>Ingresa a la ruta principal de un directorio o carpeta en la terminal</li>
+        <li><b>gceit INIT: </b>Iniciar un proyecto git.</li>
+        <li><b>git config --global user.email "Email personal": </b>Identificar y configurar localmente el email en un repositorio local</li>
+        <li><b>git config --global user.name "name personal": </b>Identificar y configurar localmente el nombre del usuario en un repositorio local</li>
+        <li><b>git add . : </b>Agrega todos los archivos modificados al repositorio</li>
+        <li><b>git status: </b>Muestra el estado del directorio de trabajo y permite ver los cambios que se han preparado</li>
+        <li><b>git commit -m "Nuevo comentario": </b>Guardar los cambios realizados en el repositorio con un mensaje resumidio</li>
+        <li><b>git branch: </b>Mostrar el nombre de la rama</li>
+        <li><b>git branch -m nombre rama: </b>Cambiar el nombre de la rama</li>
+        <li><b>git log: </b>Mostar historial del repositorio</li>
+        <li><b>git diff: </b>Muestra la lista de contenido de un directorio</li>
+        <li><b>Pwd: </b> Muestra la ruta o el directorio actual</li>
+        <li><b>Cd "Nombre archivo": </b>Sirve para ingresar a una carpeta o documento</li>
+        <li><b>clear: </b>Limpiar pantalla del terminal</li>
+        <li><b>git config user.name: </b>Identifica el nombre de usuario en el repositorio local</li>
+        <li><b>git config user.email: </b>Verifica el correo de usuario en el repositorio local</li>
+        <li><b>ls: </b>Muestra la lista de contenido de un directorio</li>
+        <li><b>git config --global --user-all user.name: </b>Elimina las configuarciones del nombre de usuario en el repositorio</li>
+        <li><b>cd .. : </b>Salir del drectorio en la terminal</li>
+        <li><b>Q:</b>Me habilita la opcion de escribir</li>
+        <li><b>git remote -v:</b>Muestra todos los repositorios remoto que esta conectado con git local</li>
+
+    <h2>Comando para actualizar datos a github</h2>
+        <li><b>git add . : </b>Agrega todos los archivos modificados al repositorio</li>
+        <li><b>git status: </b>Muestra el estado del directorio de trabajo y permite ver los cambios que se han preparado</li>
+        <li><b>git commit -m "Nuevo comentario": </b>Guardar los cambios realizados en el repositorio con un mensaje resumidio</li>
+        <li><b>git remote add origin url: </b>Se agrega la dirección web del repositorio</li>
+        <li><b>git push: </b>Envia los comits del repositorio local al remoto</li>
+        
 </body>
 </html>
